Restructuring and Refactoring some parts

--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="author" content="Don Klanakin">
-    <meta name="description" content="description goes here">
-    <meta name="keyword" content="keywords go here">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Don Klanakin's Template</title>
-    <link rel="stylesheet" href="./dist/css/style.css">
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
-</head>
-<body>
-    <h1>DK</h1>
-    <a href="#" class="btn">Like!</a>
-    <script src="./dist/js/main.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="author" content="Don Klanakin">
+        <meta name="description" content="description goes here">
+        <meta name="keyword" content="keywords go here">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Don Klanakin's Template</title>
+        <link rel="stylesheet" href="./dist/css/style.css">
+        <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon"></head>
+    <body>
+        <h1>DK</h1>
+        <a href="#" class="btn">Like!</a>
+        <script src="./dist/js/main.js"></script>
+    </body>
 </html>
