--- a/index.html
+++ b/index.html
@@ -10,8 +10,21 @@
         <link rel="stylesheet" href="./dist/css/style.css">
         <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon"></head>
     <body>
-        <h1>DK</h1>
-        <a href="#" class="btn">Like!</a>
+        <head>
+            <nav class="navbar">
+                <h1>DK</h1>
+            </nav>
+        </head>
+        <section class="math-tools util-margin-top-s">
+            <div class="row">
+                <div class="gcf">
+                    <input type="number" placeholder="First number">
+                    <input type="number" placeholder="Second number">
+                    <a href="#" class="btn">Find GCF</a>
+                    <a href="#" class="btn">Clear</a>
+                </div>
+            </div>
+        </section>
         <script src="./dist/js/main.js"></script>
     </body>
 </html>
