--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
         </head>
         <section class="math-tools util-margin-top-s">
             <div class="row">
-                <div class="gcf">
-                    <input type="number" placeholder="First number">
-                    <input type="number" placeholder="Second number">
-                    <a href="#" class="btn">Find GCF</a>
+                <div class="greatest-common-factor">
+                    <input type="number" placeholder="First number" class="input__box">
+                    <input type="number" placeholder="Second number" class="input__box">
+                    <a href="#" class="btn btn__find-gcf">Find GCF</a>
                     <a href="#" class="btn">Clear</a>
+                    <div class="result util-margin-vertical-s">
+                        <p></p>
+                    </div>
                 </div>
             </div>
         </section>
