--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <section class="math-tools util-margin-top-s">
             <div class="row">
                 <div class="greatest-common-factor">
-                    <input type="number" placeholder="First number" class="input__box">
-                    <input type="number" placeholder="Second number" class="input__box">
+                    <input type="number" placeholder="Positive number" class="input__box">
+                    <input type="number" placeholder="Positive number" class="input__box">
                     <a href="#" class="btn btn__find-gcf">Find GCF</a>
                     <a href="#" class="btn">Clear</a>
                     <div class="result util-margin-vertical-s">
