--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
         <section class="math-tools util-margin-top-s">
             <div class="row">
                 <div class="greatest-common-factor">
-                    <input type="number" placeholder="Positive number" class="input__box">
-                    <input type="number" placeholder="Positive number" class="input__box">
-                    <a href="#" class="btn btn__find-gcf">Find GCF</a>
-                    <a href="#" class="btn">Clear</a>
-                    <div class="result util-margin-vertical-s">
+                    <div class="input__box">
+                        <input type="number" placeholder="Positive number" class="input__box--gcf">
+                        <input type="number" placeholder="Positive number" class="input__box--gcf">
+                        <a href="#" class="btn btn__find-gcf">Find GCF</a>
+                        <a href="#" class="btn">Clear</a>
+                    </div>
+                    <div class="output__box output__box--gcf util-margin-top-xs">
                         <p></p>
                     </div>
                 </div>
